adjust photo tpye

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -46,7 +46,7 @@
         <h1 id="name"></h1>
         
         <script>
-          const names = ["李忆唐", "Yitang Li"];
+          const names = ["王浩", "Hao Wang"];
           const nameElement = document.getElementById("name");
           let index = 0;
         
