--- a/html_source_file/assets/css/style-no-dark-mode.css
+++ b/html_source_file/assets/css/style-no-dark-mode.css
@@ -54,11 +54,15 @@ papertitle { font-weight: 600; font-size: 100%; }
 
 .image:before { -moz-transition: opacity 0.2s ease-in-out; -webkit-transition: opacity 0.2s ease-in-out; -ms-transition: opacity 0.2s ease-in-out; transition: opacity 0.2s ease-in-out; border-radius: 0.35em; content: ''; display: block; height: 100%; left: 0; opacity: 0.5; position: absolute; top: 0; width: 100%; }
 
-.image.avatar { border-radius: 100%; }
+.image { border-radius: 0.35em; }
+
+.image.avatar img {
+  width: 160px;
+  height: 200px;
+  object-fit: cover;
+}
 
 .image.avatar:before { display: none; }
-
-.image.avatar img { border-radius: 100%; width: 45%; padding: 20px; }
 
 #header .image.avatar { margin: 0 0 1em 0; width: 8.00em; }
 
@@ -137,7 +141,11 @@ footer { width: 232px; float: left; position: fixed; bottom: 30px; -webkit-font-
   section { border: 1px solid #e5e5e5; border-width: 1px 0; padding: 20px 0; margin: 0 0 20px; }
   header a small { display: inline; }
   header ul { position: absolute; right: 50px; top: 52px; }
-  .image.avatar img { border-radius: 100%; width: 117px; padding: 20px; }
+  .image.avatar img {
+  width: 160px;
+  height: 200px;
+  object-fit: cover;
+}
   #head1o2 { visibility: hidden; }
   #head2o2 { visibility: hidden; } }
 @media print, screen and (max-width: 960px) { body { word-wrap: break-word; padding: 15px; }
@@ -148,7 +156,11 @@ footer { width: 232px; float: left; position: fixed; bottom: 30px; -webkit-font-
   body { padding: 15px; }
   header ul { width: 99%; }
   header li, header ul li + li + li { width: 33%; }
-  .image.avatar img { border-radius: 100%; width: 95px; padding: 20px; }
+  .image.avatar img {
+  width: 160px;
+  height: 200px;
+  object-fit: cover;
+}
   #head1o2 { visibility: hidden; }
   #head2o2 { visibility: hidden; } }
 @media print { body { padding: 0.4in; font-size: 12pt; color: #444; } }
